--- a/25_Day_World_countries_data_visualization_1/css/style.css
+++ b/25_Day_World_countries_data_visualization_1/css/style.css
@@ -5,13 +5,13 @@ body {
 }
 
 h2 {
-  color: rgb(255,165,0);
+  color: rgb(255, 165, 0);
 }
 
 button {
   padding: 5px 15px;
-  background-color: rgb(255,165,0);
-  border-color: rgb(255,165,0);
+  background-color: rgb(255, 165, 0);
+  border-color: rgb(255, 165, 0);
   margin: auto 0.5%;
 }
 
@@ -22,7 +22,7 @@ header {
 
 header,
 .graphs {
-  background-color: rgb(241,241,241);
+  background-color: rgb(241, 241, 241);
 }
 
 .graphs {
@@ -50,7 +50,7 @@ header,
 }
 
 .bar {
-  background-color: rgb(242,169,59);
+  background-color: rgb(242, 169, 59);
   border-radius: 2%;
   height: 25px;
   /* width: 100%; */
